# elflet

./: .gitignore  .gitmodules  README.md
docs/: REST.md
examples/: shadow_fujitsu_ac.json  shadow_fujitsu_ac2_complecation.json  shadow_fujitsu_ac_complecation.json  shadow_hitachi_lamp.json  shadow_hitachi_lamp2.json  shadow_mitsubishi_ac.json  shadow_mitsubishi_ac2_complecation.json  shadow_mitsubishi_ac_complecation.json  shadow_panasonic_ac_complecation.json  shadow_panasonic_lamp.json  shadow_panasonic_lamp2.json
firmware/: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
firmware/components/: cpp_utils
firmware/components/blehid/: component.mk  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_device_le_prf.c  hidd_le_prf_int.h
firmware/components/cpp_utils/: CMakeLists.txt  CPPNVS.cpp  CPPNVS.h  FreeRTOS.cpp  FreeRTOS.h  GeneralUtils.cpp  GeneralUtils.h  I2C.cpp  I2C.h  SPI.cpp  SPI.h  Task.cpp  Task.h  component.mk
firmware/components/elflet-version/: CMakeLists.txt  Makefile  component.mk
firmware/components/esp32-snippets/: component.mk
firmware/components/esp_hid/: CMakeLists.txt
firmware/components/esp_hid/src/: esp_hid_gap.c
firmware/components/json11/: CMakeLists.txt  component.mk
firmware/components/mongoose/: CMakeLists.txt  component.mk
firmware/components/posix/: CMakeLists.txt  posix_shims.c
firmware/components/spiffsimage/: CMakeLists.txt  Makefile  component.mk  dummy.c  pdata.json.in
firmware/examples/: shadow_fujitsu_ac.json  shadow_fujitsu_ac_complecation.json  shadow_mitsubishi_ac.json  shadow_mitsubishi_ac_complecation.json
firmware/main/: BleHidJson.cpp  BleHidJson.h  BleHidService.c  BleHidService.h  ButtonService.cpp  ButtonService.h  CMakeLists.txt  Config.cpp  Config.h  DeepSleep.cpp  DeepSleep.h  FirmwareDownloader.cpp  FirmwareDownloader.h  IRService.cpp  IRService.h  JsonTags.cpp  Kconfig.projbuild  LEDService.cpp  LEDService.h  PubSubService.cpp  PubSubService.h  PublishService.cpp  PublishService.h  REST.h  RESTblehid.cpp  RESTconfig.cpp  RESTir.cpp  RESTsensor.cpp  RESTshadow.cpp  RESTstatus.cpp  SensorService.cpp  SensorService.h  ShadowDevice.cpp  ShadowDevice.h  Stat.cpp  Stat.h  TimeService.cpp  TimeService.h  WatchDog.cpp  WatchDog.h  (+17 more)
firmware/main/foundations/: ContentTypeDict.cpp  Mutex.h  NameResolver.cpp  NameResolver.h  SmartPtr.h  TimeObj.cpp  TimeObj.h  WebserverHandler.cpp  bdlist.h  bme280.cpp  bme280.h  htdigestfs.c  htdigestfs.h  irrc.c  irrc.h  ota.cpp  ota.h  otaRest.cpp  reboot.cpp  reboot.h  session.cpp  session.h  signature.h  webserver.cpp  webserver.h
firmware/main/html/: index.html  sensor  wizard.css  wizard.html  wizard.js
firmware/main/html/manage/: config
firmware/tools/: ota  signimage  version
hosttool/: Makefile  README.md  elflet-config  elflet-shadow  irslib.c  irslib.h  irtx.c
hosttool/elfletlib/: elflet.py  elfletConfig.py  elfletShadow.py
pcb/: elflet-bom.xlsx  esp32-mark.idraw  logo.idraw
pcb/grahics/: elflet-board.idraw  esp32-mark.idraw
pcb/grahics/3dcg/: prepare.py
pcb/jig/: eagle.epf  elflet-jig.brd  elflet-jig.sch
pcb/mainboard/: DESCRIPTION  dimension.brd  eagle.epf  elflet-panelized.gvp  elflet.brd  elflet.gvp  elflet.sch  panelize
raspitools/: debug  erasenvs  eraseota  esptool  monitor  reset  writeflash
raspitools/cfg/: esp32-raspi.cfg  esp32-raspi1.cfg  esp32-raspi2.cfg  esp32.cfg  raspi-jtag.cfg
